[WCMSFEQ-215] - Fixed issue with print showing large spacing on left and right of content.

--- a/CancerGov/_src/StyleSheets/_print.scss
+++ b/CancerGov/_src/StyleSheets/_print.scss
@@ -2,6 +2,14 @@
   html {
 	font-size: 75%;
   }
+	
+	// fixes problem where text wasn't taking full width on print page
+	.row, nav .sub-nav-group-wrapper {
+    max-width: 2800px;
+}
+	.general-page-body-container, header {
+		background: none;	
+	}
 
   nav, .navigation, .nav, .language-bar, .nav-search-bar, .fixedtotop, .breadcrumbs, .bcrumbs, .page-options, .local-navigation, #section-menu-button, .site-footer, #nvcgSlNotificationArea, .toptoc, .pagination, .syndication, .article-image-enlarge, .previous-next-links, .general-page-body-container > div.large-12, .cthp-version-toggle, .hero, .carousel-title, .other-nci-sites, .icon-exit-notification, .accordion-controls {
     display: none !important; // important used because in some places foundation classes are overwriting
